--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -10,7 +10,7 @@
   <body>
     <p class="odd">Number 1 - I'm a class!</p>
     <div id="nobg">Number 2 - I'm one ID.</div>
-    <p class="odd" class="big">Number 3 - I'm a class, but cooler!</p>
+    <p class="odd big">Number 3 - I'm a class, but cooler!</p>
     <div id="yesbg">Number 4 - I'm another ID.</div>
     <p class="odd">Number 5 - I'm a class!</p>
   </body>
